Added feh comment for background

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -41,7 +41,16 @@ $webBrowser = librewolf
 ### AUTOSTART ###
 #################
 
+# Launch waybar
 exec-once = waybar
+
+# Set a background image with feh
+# Other feh options:
+# --bg-tile FILE
+# --bg-center FILE
+# --bg-max FILE
+# --bg-fill FILE
+# exec-once = feh --bg-scale /path/to/image.file
 
 #############################
 ### ENVIRONMENT VARIABLES ###
