added tofi to hyprland.conf

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -34,8 +34,12 @@ monitor=,1920x1080@60,auto,1
 # Set programs that you use
 $terminal = alacritty 
 $fileManager = nemo 
-$menu = wofi --show drun
 $webBrowser = librewolf
+# tofi 
+$menu = tofi
+
+# wofi
+#$menu = wofi --show drun
 
 #################
 ### AUTOSTART ###
