changed to tofi-drun

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ $terminal = alacritty
 $fileManager = nemo 
 $webBrowser = librewolf
 # tofi 
-$menu = tofi
+$menu = tofi-drun
 
 # wofi
 #$menu = wofi --show drun
