--- a/dotfiles/.config/tofi/config
+++ b/dotfiles/.config/tofi/config
@@ -16,7 +16,7 @@
 	font = "Sans"
 
 	# Point size of text.
-	font-size = 24
+	font-size = 8 
 
 	# Comma separated list of OpenType font feature settings to apply,
 	# if supported by the chosen font. The format is similar to the CSS
@@ -50,7 +50,7 @@
 	# Default text color
 	#
 	# All text defaults to this color if not otherwise specified.
-	text-color = #FFFFFF
+	text-color = #68C2D9
 
 	# All pieces of text have the same theming attributes available:
 	#
@@ -102,7 +102,7 @@
 	# alternate-result-background-corner-radius = 0
 
 	# Selection text
-	selection-color = #F92672
+	selection-color = #68C2D9
 	selection-background = #00000000
 	selection-background-padding = 0
 	selection-background-corner-radius = 0
@@ -167,7 +167,7 @@
 ### Window theming
 #
 	# Width and height of the window. Can be pixels or a percentage.
-	width = 1280
+	width = 640
 	height = 720
 
 	# Window background color
@@ -180,10 +180,10 @@
 	outline-color = #080800
 
 	# Width of the border in pixels.
-	border-width = 12
+	border-width = 2
 
 	# Border color
-	border-color = #F92672
+	border-color = #68C2D9
 
 	# Radius of window corners in pixels.
 	corner-radius = 0
