--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 {
     "layer": "top",
-    "modules-left": [ "cpu", "network" ],
+    "modules-left": [ "cpu", "network", "memory" ],
     "modules-center": [ "clock" ],
     "modules-right": [ "battery" ],
     "sway/window": {
@@ -38,5 +38,9 @@
           "<span color='#ff9977'>▇</span>", // orange
           "<span color='#dd532e'>█</span>"  // red
      ]
+    },
+    "memory": {
+    "interval": 30,
+    "format": "{used:0.1f}G/{total:0.1f}G "
     }
 }
